environments/prod/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nexadesk-api
  namespace: nexadesk-prod
  labels:
    app.kubernetes.io/name: nexadesk
    app.kubernetes.io/component: api
    app.kubernetes.io/environment: prod
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nexadesk-api
  template:
    metadata:
      labels:
        app: nexadesk-api
        app.kubernetes.io/name: nexadesk
        app.kubernetes.io/component: api
        app.kubernetes.io/environment: prod
    spec:
      containers:
        - name: api
          image: ghcr.io/luisflpdev/nexadesk-api:latest
          imagePullPolicy: Always

          ports:
            - name: http
              containerPort: 3000

          readinessProbe:
            httpGet:
              path: /readyz
              port: http
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 2
            failureThreshold: 3

          livenessProbe:
            httpGet:
              path: /healthz
              port: http
            initialDelaySeconds: 10
            periodSeconds: 20
            timeoutSeconds: 2
            failureThreshold: 3

          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "384Mi"
