environments/prod/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nexadesk-frontend
  namespace: nexadesk-prod
  labels:
    app.kubernetes.io/name: nexadesk
    app.kubernetes.io/component: frontend
    app.kubernetes.io/environment: prod
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nexadesk-frontend
  template:
    metadata:
      labels:
        app: nexadesk-frontend
        app.kubernetes.io/name: nexadesk
        app.kubernetes.io/component: frontend
        app.kubernetes.io/environment: prod
    spec:
      containers:
        - name: frontend
          image: ghcr.io/luisflpdev/nexadesk-frontend:f9a12e9
          imagePullPolicy: Always

          ports:
            - name: http
              containerPort: 80

          readinessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 2
            failureThreshold: 3

          livenessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 10
            periodSeconds: 20
            timeoutSeconds: 2
            failureThreshold: 3

          resources:
            requests:
              cpu: "50m"
              memory: "64Mi"
            limits:
              cpu: "300m"
              memory: "192Mi"
